main.css
/* ... */
.pixel-switch-wrapper .toggle-wrapper #switch {
    height: 0;
    width: 0;
    visibility: hidden;
    position: absolute
}

.pixel-switch-wrapper .toggle-wrapper #switch:checked+label {
    background: #bae67e
}

.pixel-switch-wrapper .toggle-wrapper #switch:checked+label:after {
    left: calc(100% - 3px);
    -webkit-transform: translateX(-100%);
    transform: translateX(-100%)
}

.pixel-switch-wrapper .toggle-wrapper label {
    cursor: pointer;
    text-indent: -9999px;
    width: 45px;
    height: 25px;
    background: grey;
    display: block;
    border-radius: 100px;
    position: relative
}

.pixel-switch-wrapper .toggle-wrapper label:after {
    -webkit-transition: all .2s ease-in-out;
    transition: all .2s ease-in-out;
    content: '';
    position: absolute;
    top: 3px;
    left: 3px;
    width: 19px;
    height: 19px;
    background: #fff;
    border-radius: 100%
}

.intro {
    padding: 120px 100px;
    height: 100vh;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    -ms-flex-pack: distribute;
    justify-content: space-around;
    max-width: 1440px;
    margin: 0 auto
}

@media screen and (max-width:630px) {
    .intro {
        padding: 120px 70px
    }
}

@media screen and (max-width:550px) {
    .intro {
        padding: 120px 50px
    }
}

@media screen and (max-width:480px) {
    .intro {
        padding: 70px 50px
    }
}

.intro__hello,
.intro__tagline {
    font-size: 2.5rem
}

.night .intro__hello,
.night .intro__tagline {
    font-size: 4rem
}

@media screen and (max-width:1024px) {
    .intro__hello,
    .intro__tagline {
        font-size: 2.25rem
    }

    .night .intro__hello,
    .night .intro__tagline {
        font-size: 3.5rem
    }
}

@media screen and (max-width:768px) {
    .intro__hello,
    .intro__tagline {
        font-size: 2rem
    }

    .night .intro__hello,
    .night .intro__tagline {
        font-size: 3rem
    }
}

@media screen and (max-width:550px) {
    .intro__hello,
    .intro__tagline {
        font-size: 1.75rem
    }
}

@media screen and (max-width:360px) {
    .intro__hello,
    .intro__tagline {
        font-size: 1.5rem
    }
}

@media screen and (max-width:330px) {
    .intro__hello,
    .intro__tagline {
        font-size: 1.4rem
    }

    .night .intro__hello,
    .night .intro__tagline {
        font-size: 2.5rem
    }
}

.intro__hello .emoji,
.intro__tagline .emoji {
    width: 40px;
    height: 40px
}

@media screen and (max-width:1024px) {
    .intro__hello .emoji,
    .intro__tagline .emoji {
        width: 35px;
        height: 35px
    }
}

@media screen and (max-width:768px) {
    .intro__hello .emoji,
    .intro__tagline .emoji {
        width: 30px;
        height: 30px
    }
}

@media screen and (max-width:360px) {
    .intro__hello .emoji,
    .intro__tagline .emoji {
        width: 25px;
        height: 25px
    }
}

.intro__hello {
    font-weight: 300
}

.intro__hello .wave-hand {
    background-image: url(../img/emojis/wave.png);
    margin-left: 10px;
    cursor: pointer
}

.intro__hello .wave-hand.animated {
    -webkit-animation-duration: 1s;
    animation-duration: 1s;
    -webkit-animation-fill-mode: both;
    animation-fill-mode: both
}

.intro__hello .wave-hand.wave {
    -webkit-animation-name: wave;
    animation-name: wave
}

@-webkit-keyframes wave {
    from {
        -webkit-transform: none;
        transform: none
    }
    15% {
        -webkit-transform: translate3d(-20%, 0, 0) rotate3d(0, 0, 1, -10deg);
        transform: translate3d(-20%, 0, 0) rotate3d(0, 0, 1, -10deg)
    }
    30% {
        -webkit-transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 7deg);
        transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 7deg)
    }
    45% {
        -webkit-transform: translate3d(-15%, 0, 0) rotate3d(0, 0, 1, -10deg);
        transform: translate3d(-15%, 0, 0) rotate3d(0, 0, 1, -10deg)
    }
    60% {
        -webkit-transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 5deg);
        transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 5deg)
    }
    75% {
        -webkit-transform: translate3d(-5%, 0, 0) rotate3d(0, 0, 1, -2deg);
        transform: translate3d(-5%, 0, 0) rotate3d(0, 0, 1, -2deg)
    }
    to {
        -webkit-transform: none;
        transform: none
    }
}

@keyframes wave {
    from {
        -webkit-transform: none;
        transform: none
    }
    15% {
        -webkit-transform: translate3d(-20%, 0, 0) rotate3d(0, 0, 1, -10deg);
        transform: translate3d(-20%, 0, 0) rotate3d(0, 0, 1, -10deg)
    }
    30% {
        -webkit-transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 7deg);
        transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 7deg)
    }
    45% {
        -webkit-transform: translate3d(-15%, 0, 0) rotate3d(0, 0, 1, -10deg);
        transform: translate3d(-15%, 0, 0) rotate3d(0, 0, 1, -10deg)
    }
    60% {
        -webkit-transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 5deg);
        transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 5deg)
    }
    75% {
        -webkit-transform: translate3d(-5%, 0, 0) rotate3d(0, 0, 1, -2deg);
        transform: translate3d(-5%, 0, 0) rotate3d(0, 0, 1, -2deg)
    }
    to {
        -webkit-transform: none;
        transform: none
    }
}

.intro__wrap {
    max-width: 1000px;
    position: relative;
}

.intro__wrap .intro__icon {
    float: right;
}
    
.intro__wrap .intro__tagline {
    line-height: 50px;
}

@media screen and (max-width:550px) {
    .intro__wrap .intro__icon {
        float: none;
        display: none;
    }
}

.intro__tagline {
    font-weight: 300;
    max-width: 700px;
    position: relative;
}

.intro__tagline .name {
    font-weight: 700
}

.intro__tagline .technologist {
    background-image: url(../img/emojis/technologist.png)
}

@media screen and (max-width:900px) {
    .intro__tagline {
        max-width: 500px;
    }
}
/* ... */

